# ModernNVCloth

./: .gitignore  CMakeLists.txt
nv_cloth/src/NvCloth/: SwFabric.cpp
nv_cloth/src/NvClothExt/: ClothGeodesicTetherCooker.cpp  ClothMeshQuadifier.cpp
src/NvCloth/: TripletScheduler.cpp
